# epi_detective

./: CLAUDE.md  Dockerfile  LICENSE  README.md  inference.py
.github/: copilot-instructions.md
docs/: BUILD_SCHEDULE.md  EpiDetective- The Optimal OpenEnv Hackathon Submission.md  EpiDetective_Implementation_Plan.md  HACKATHON_RULES_AND_JUDGING.md  OPENENV_INTEGRATION.md  OpenEnv_Hackathon_Round1_Guide.md  PATHOGEN_KNOWLEDGE_BASE.md  README.md  SCENARIO_ENGINE.md  TASK_SPECIFICATIONS.md
epi_detective/: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
epi_detective/data/: food_vehicles.json  pathogens.json  settings.json
epi_detective/engine/: evidence_engine.py  scenario_generator.py
epi_detective/grader/: grader.py
epi_detective/server/: __init__.py  app.py  epi_detective_environment.py
epi_detective/tests/: test_core.py
server/: app.py
